[workspace]
resolver = "2"
members = ["host", "db-access", "db-models", "guest-pricing"]

[workspace.package]
name = "pitchlake-coprocessor"
version = "0.1.0"
edition = "2021"
default-run = "host"

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true
