[package]
name = "db-access"
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
dotenv = "0.15.0"
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "bigdecimal",
    "chrono",
    "macros",
] }


chrono = "0.4.38"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eth-rlp-types = { git = "https://github.com/piwonskp/eth-rlp-verify.git" }
