[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.1.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
db-access = { path = "../db-access"}
tokio = "1.41.0"
eth-rlp-types = { git = "https://github.com/piwonskp/eth-rlp-verify.git" }
sqlx = "0.8.2"
