[package]
name = "pricing_calculator"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.1.2", default-features = false, features = ['std', 'getrandom'] }
eyre = "0.6"
chrono = { version = "0.4", features = ["serde"] }
# Reserve price dependencies
ndarray = "0.15"
statrs = { version = "0.17", default-features = false}
optimization = { git = "https://github.com/piwonskp/optimization-rust" }
rand = "0.8.5"
rand_distr = "0.4.3"
ndarray-rand = "0.15.0"
uuid = { version = "1.10.0", features = ["v4"] }
nalgebra = "0.33.2"
lstsq = "0.6.0"
eth-rlp-types = { git = "https://github.com/piwonskp/eth-rlp-verify.git" }
